# RSRemakeTutorLoL

./: .gitignore  Cargo.toml  debug.json  test.json
src/: README.md  main.rs
src/entity/: account.rs  account_summoner.rs  game_data.rs  games.rs  log.rs  mod.rs  prelude.rs
src/routes/: game_route.rs  index.rs  mod.rs
src/services/: game_service.rs  lol_service.rs  mod.rs
src/structs/: game_struct.rs  local_champion_struct.rs  local_items_struct.rs  local_runes_struct.rs  local_stats_struct.rs  mod.rs  riot_allchampion_struct.rs  riot_champion_struct.rs  riot_items_struct.rs  routes_struct.rs  target_struct.rs
