[package]
name = "RSRemakeTutorLoL"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
meval = "0.2.0"
once_cell = "1.20.2"
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
tokio = { version = "1.40.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
rpath = false
panic = 'abort'
incremental = false
