[package]
name = "RSRemakeTutorLoL"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
futures = "0.3.31"
meval = "0.2.0"
once_cell = "1.20.2"
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
tokio = { version = "1.40.0", features = ["full"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.38", features = ["serde"] }
sea-orm = { version = "1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
] }
actix-cors = "0.7.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
rpath = false
panic = 'abort'
incremental = false
